Cleaned up website. Alignment looks better. Header is now fixed on each page.

--- a/Homepage.css
+++ b/Homepage.css
@@ -8,7 +8,7 @@ body{
 	background-color: black;
 	/*background-image: url("https://i.imgur.com/35CMAeF.png") no-repeat center center fixed;	*/
 	margin: 0; padding: 0;
-	background: url('https://i.imgur.com/35CMAeF.png') no-repeat fixed; 
+	background: url('https://i.imgur.com/MoJAKIGr.png') repeat fixed; 
 	background-size: 100% 100%;
 		-webkit-background-size: cover;
      
